// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaList should render correctly with basic props when no schema is selected 1`] = `
<div>
  <div
    aria-labelledby="testProp-legend"
    class="pf-v6-c-form__group"
    role="group"
  >
    <div
      class="pf-v6-c-form__group-control pf-m-stack"
    >
      <div
        aria-label="Test schema list"
        class="pf-v6-c-toggle-group"
        data-testid="test-schema-list"
        id="testProp"
        role="group"
      >
        <div
          class="pf-v6-c-toggle-group__item"
        >
          <button
            aria-pressed="false"
            class="pf-v6-c-toggle-group__button"
            id="Schema 1"
            type="button"
          >
            <span
              class="pf-v6-c-toggle-group__text"
            >
              Schema 1
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-toggle-group__item"
        >
          <button
            aria-pressed="false"
            class="pf-v6-c-toggle-group__button"
            id="Schema 2"
            type="button"
          >
            <span
              class="pf-v6-c-toggle-group__text"
            >
              Schema 2
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaList should render correctly with basic props when schema is selected 1`] = `
<div>
  <div
    aria-labelledby="testProp-legend"
    class="pf-v6-c-form__group"
    role="group"
  >
    <div
      class="pf-v6-c-form__group-control pf-m-stack"
    >
      <div
        aria-label="Test schema list"
        class="pf-v6-c-toggle-group"
        data-testid="test-schema-list"
        id="testProp"
        role="group"
      >
        <div
          class="pf-v6-c-toggle-group__item"
        >
          <button
            aria-pressed="true"
            class="pf-v6-c-toggle-group__button pf-m-selected"
            id="Schema 1"
            type="button"
          >
            <span
              class="pf-v6-c-toggle-group__text"
            >
              Schema 1
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-toggle-group__item"
        >
          <button
            aria-pressed="false"
            class="pf-v6-c-toggle-group__button"
            id="Schema 2"
            type="button"
          >
            <span
              class="pf-v6-c-toggle-group__text"
            >
              Schema 2
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaList should use Typeahead when items > 5, none selected 1`] = `
<div>
  <div
    aria-labelledby="testProp-legend"
    class="pf-v6-c-form__group"
    role="group"
  >
    <div
      class="pf-v6-c-form__group-control pf-m-stack"
    >
      <div
        class="pf-v6-c-menu-toggle pf-m-full-width pf-m-typeahead"
        id="testProp"
      >
        <div
          class="pf-v6-c-text-input-group pf-m-plain"
        >
          <div
            autocomplete="off"
            class="pf-v6-c-text-input-group__main"
            data-testid="test-schema-list-typeahead-select-input"
            id="testProp-typeahead-select-input"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <input
                aria-label="Type to filter"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Select or write an option"
                type="text"
                value=""
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          />
        </div>
        <button
          aria-expanded="false"
          aria-label="undefined toggle"
          class="pf-v6-c-menu-toggle__button"
          data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-1"
          data-ouia-component-type="PF6/MenuToggle"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-menu-toggle__controls"
          >
            <span
              class="pf-v6-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaList should use Typeahead when items > 5, one selected 1`] = `
<div>
  <div
    aria-labelledby="testProp-legend"
    class="pf-v6-c-form__group"
    role="group"
  >
    <div
      class="pf-v6-c-form__group-control pf-m-stack"
    >
      <div
        class="pf-v6-c-menu-toggle pf-m-full-width pf-m-typeahead"
        id="testProp"
      >
        <div
          class="pf-v6-c-text-input-group pf-m-plain"
        >
          <div
            autocomplete="off"
            class="pf-v6-c-text-input-group__main"
            data-testid="test-schema-list-typeahead-select-input"
            id="testProp-typeahead-select-input"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <input
                aria-label="Type to filter"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Select or write an option"
                type="text"
                value="Schema 5"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Clear input value"
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="test-schema-list__clear"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-expanded="false"
          aria-label="undefined toggle"
          class="pf-v6-c-menu-toggle__button"
          data-ouia-component-id="OUIA-Generated-MenuToggle-typeahead-2"
          data-ouia-component-type="PF6/MenuToggle"
          data-ouia-safe="true"
          tabindex="-1"
          type="button"
        >
          <span
            class="pf-v6-c-menu-toggle__controls"
          >
            <span
              class="pf-v6-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
